<resources>
    <string name="app_name">Reus!!!</string>

    <string name="lema">Your meeting point</string>

    <!-- Logueo -->
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logup">Log Up</string>

    <!-- Menu -->
    <string name="data">My Data</string>
    <string name="reu">My Reus</string>
    <string name="people">My People</string>
    <string name="gallery">Gallery</string>
    <string name="notifications">Notifications</string>
    <string name="options">Options</string>
    <string name="log_out">Log out</string>

    <!-- Mis Reus -->
    <string name="new_reu">New Reu</string>
    <string name="search_reu">Search Reu</string>
    <string name="record_reu">Record Reu</string>

    <!-- Registar Reu -->
    <string name="reu_name">Reu Name</string>
    <string name="code_name">Code Name</string>
    <string name="reu_type">Reu Type</string>
    <string name="place">Place</string>
    <string name="go_map">Go to the Map</string>
    <string name="date">Date</string>

    <!-- Mapa -->
    <string name="confirm_location">Confirm Location</string>
    <string name="my_position">My current position</string>

    <!-- Registar Usuario -->
    <string name="new_user">New User</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>

    <!-- Actualizar Usuario -->
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="telephone">Telephone</string>

    <!-- Botones -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <string name="title_activity_principal">Reu!!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notificacion">NotificacionActivity</string>
    <string name="title_activity_galeria_fotos">GaleriaFotosActivity</string>

</resources>
