<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegistrarActorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_user"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:layout_width="117dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:background="@drawable/user" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/edtContraseña"
        android:layout_width="match_parent"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>