<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarReuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/new_reu" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilReuNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reu_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spnTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85">

            <EditText
                android:id="@+id/edtLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnMapa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.15"
            android:background="@drawable/map" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />


</LinearLayout>